5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1644_2703.log
== SUBMITION (2019-04-16 14:12:04) 
-- CODE:
mensagem=int(input("eleitor"))
if (mensagem >= 18):
	a = "eleitor"
	elser:
		a = "nao_eleitor"
		print(a)
-- EXECUTION TIME:
0.132347
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    elser:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:13:58) 
-- CODE:
mensagem=int(input("eleitor"))
if (mensagem >= 18):
	a = "eleitor"
	
elser:
	a = "nao_eleitor"
		
		
	
print(a)
-- EXECUTION TIME:
0.177205
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 5
    elser:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:14:23) 
-- CODE:
mensagem=int(input("eleitor"))
if (mensagem >= 18):
	a = "eleitor"
	
else:
	a = "nao_eleitor"
		
		
	
print(a)
-- EXECUTION TIME:
0.133318
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
